--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
-@import "reset.css";
-
-* {
-  box-sizing: border-box;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   margin: 0;
@@ -14,7 +12,3 @@ body {
   background-color: bisque;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
